# swisspost-smart-address-mcp

./: .gitignore  CHANGELOG.md  CITY_CORRECTION_FIX.md  LICENSE  MCP_SERVERS.md  README.md  SECURITY.md  TOPICS.md  claude_desktop_config.json  config.env  env.example  mcp-test-script.py  pyproject.toml  requirements.txt  smart-address-agent.py  start-mcp-server-and-proxy.bat  start-mcp-server-and-proxy.sh  start-mcp-server.bat  start-mcp-server.sh  test-abbreviations.py  test-city-correction.py  test-credentials.py  test-simple.py  test-webhook.py  test-zip-api.py
n8n-workflows/: .gitignore  README.md  http-proxy.py  package.json  swisspost-workflow.json  test-swisspost-workflow.js
